<resources>
    <string name="app_name">Movie base</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_title">Title:</string>
    <string name="tv_desc">Description:</string>
    <string name="tv_genre">Genre:</string>
    <string name="button_add_new">Add new</string>
    <string name="button_show_all">Show all</string>
    <string name="title_activity_movie_list">All movies</string>
</resources>
