<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title"
        android:id="@+id/tv_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_toLeftOf="@+id/et_title"
        android:layout_toStartOf="@+id/et_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        android:layout_alignTop="@+id/tv_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tv_desc"
        android:layout_toEndOf="@+id/tv_desc"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_desc"
        android:id="@+id/tv_desc"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_below="@+id/et_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_desc"
        android:layout_alignTop="@+id/tv_desc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tv_desc"
        android:layout_toEndOf="@+id/tv_desc"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_genre"
        android:id="@+id/tv_genre"
        android:layout_below="@+id/et_desc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/tv_desc"
        android:layout_alignEnd="@+id/tv_desc"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_genre"
        android:layout_alignTop="@+id/tv_genre"
        android:layout_alignLeft="@+id/et_desc"
        android:layout_alignStart="@+id/et_desc"
        android:layout_alignRight="@+id/et_desc"
        android:layout_alignEnd="@+id/et_desc"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_new"
        android:id="@+id/button_add_new"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/et_genre"
        android:layout_alignLeft="@+id/button_show_all"
        android:layout_alignStart="@+id/button_show_all"
        android:layout_alignRight="@+id/button_show_all"
        android:layout_alignEnd="@+id/button_show_all"
        android:onClick="onClickAddNew"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_show_all"
        android:id="@+id/button_show_all"
        android:layout_below="@+id/button_add_new"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>
